--- a/login/index.html
+++ b/login/index.html
@@ -5,11 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login | Disruptive Capital</title>
     <link rel="stylesheet" href="../styles.css">
+    <script src="../scripts.js" defer></script>
 </head>
 <body>
     <!-- Header -->
     <header class="header">
-        <div class="logo">Disruptive Capital</div>
+        <nav class="logo">
+            <a href="../index.html"><img src="../images/dclogo.png" alt="Disruptive Capital Logo"></a>
+            <a href="../index.html"><h4>Disruptive Capital</h4></a>
+        </nav>
+
+          <div class="menu-icon" id="menu-icon">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+
         <nav class="nav">
             <a href="../index.html">Home</a>
             <a href="../about/index.html">About Us</a>
