--- a/about/index.html
+++ b/about/index.html
@@ -136,10 +136,11 @@
     <!-- Header -->
     <header class="header">
 
-        <div class="logo">
-            <img src="../images/logo.png" alt="Disruptive Logo" class="logo-image">
-            <span class="logo-text">Disruptive Capital </span>
-        </div>
+        <nav class="logo">
+            <a href="../index.html"><img src="../images/dclogo.png" alt="Disruptive Capital Logo"></a>
+            <a href="../index.html"><h4>Disruptive Capital</h4></a>
+        </nav>
+
         <div class="hamburger" id="hamburger">
             <div></div>
             <div></div>
