--- a/heatmap.html
+++ b/heatmap.html
@@ -7,7 +7,8 @@
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <title>Disruptive Capital</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
+    <script src="./scripts.js" defer></script>
 </head>
    
    <style>
@@ -169,16 +170,16 @@
 <body>
 
     <header class="header">
-        <div class="logo">
-            <img src="./images/dclogo.png" alt="Disruptive Capital Logo">
-            <h4>Disruptive Capital</h4>
-        </div>
+        <nav class="logo">
+            <a href="../index.html"><img src="../images/dclogo.png" alt="Disruptive Capital Logo"></a>
+            <a href="../index.html"><h4>Disruptive Capital</h4></a>
+        </nav>
         
         <!-- Hamburger Menu Icon (Visible on Mobile Only) -->
-        <div class="container menu-icon" id="menu-icon" onclick="toggleMenu(this)">
-            <div class="bar1"></div>
-            <div class="bar2"></div>
-            <div class="bar3"></div>
+        <div class="menu-icon" id="menu-icon" onclick="toggleMenu(this)">
+            <div></div>
+            <div></div>
+            <div></div>
         </div>
         
         <!-- Navigation Menu -->
