--- a/premium/index.html
+++ b/premium/index.html
@@ -4,246 +4,247 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Disruptive Capital</title>
-    <link rel="stylesheet" href="styles.css">
     
-    <style>
-        body {
-            font-family: "Times New Roman";
-            margin: 0;
-            padding: 0;
-            background-color: #f5f5f7;
-            color: #1d1d1f;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            overflow: hidden;
-        }
-
-        .header {
-            height: 60px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px 20px;
-            background-color: #ffffff;
-            color: #1d1d1f;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            width: 100%;
-            position: fixed;
-            top: 0;
-            z-index: 1000;
-        }
-
-        .logo {
-            display: flex;
-            align-items: center;
-            gap: 5px;
-        }
-
-        .logo img {
-            height: 40px;
-            gap:25px
-        }
-
-        .logo h4 {
-            font-size: 1.5rem;
-            margin: 0;
-            color: #1d1d1f;
-        }
-
-        .nav {
-            display: flex;
-            gap: 20px;
-        }
-
-        .nav a {
-        text-decoration: none;
-        color: #1d1d1f;
-        font-size: 1.5rem;
-        padding: 8px 8px;
-        padding-right: 10px;
-        position: relative; /* Necessary for pseudo-element positioning */
-        display: inline-block;
-        overflow: hidden; /* Ensures the underline animation stays within bounds */
-        padding-right: 40px;
-    }
-
-    .nav a::after {
-        content: "";
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 2px;
-        background-color: #1d1d1f; /* Color of the underline */
-        transform: scaleX(0);
-        transform-origin: bottom right;
-        transition: transform 0.3s ease-out;
-    }
-
-    .nav a:hover::after {
-        transform: scaleX(.8);
-        transform-origin: bottom left;
-    }
-
-        .dropdown-container {
-            position: relative;
-        }
-
-        .dropdown-container:hover .dropdown-menu {
-            display: block;
-        }
-
-        .dropdown-menu {
-    display: none;
-    position: absolute;
-    top: 100%; /* Directly below the "Reports & Insights" button */
-    background-color: #fff;
-    border: 1px solid #ddd;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    z-index: 1000;
-    min-width: 270px; /* Adjust width to fit content */
-    padding: 30px; /* Padding inside the dropdown */
-    right: 10px;
-    box-sizing: border-box;
-  
-}
-.dropdown-menu a {
-    display: block;
-    padding: 10px 15px; 
-    margin: 0; 
-    text-align: left; /* Align text to the left */
-    color: #333; /* Standard text color */
-    text-decoration: none; /* Remove underline by default */
-    background-color: transparent; /* Ensure no extra background color */
-    white-space: nowrap; /* Prevent text wrapping */
-    border-bottom: 1px solid #ddd; /* Add a border between items */
-}
-
-
-.dropdown-menu a:hover {
-    background-color: #f0f0f0;
-    color: #121F32;
-}
-        /* Hamburger Menu Styles */
-        .menu-icon {
-            display: none;
-            flex-direction: column;
-            justify-content: space-between;
-            width: 25px;
-            height: 18px;
-            cursor: pointer;
-        }
-
-        .menu-icon div {
-            height: 3px;
-            background-color: #1d1d1f;
-            border-radius: 2px;
-        }
-
-        @media screen and (max-width: 768px) {
-            .nav {
-                display: none;
+        <style>
+            body {
+                font-family: "Times New Roman";
+                margin: 0;
+                padding: 0;
+                background-color: #f5f5f7;
+                color: #1d1d1f;
+                display: flex;
                 flex-direction: column;
-                position: absolute;
-                top: 60px;
-                right: 20px;
+                justify-content: center;
+                align-items: center;
+                height: 100vh;
+                overflow: hidden;
+            }
+
+            .header {
+                height: 60px;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                padding: 10px 20px;
                 background-color: #ffffff;
-                padding: 10px;
-                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-                border-radius: 8px;
+                color: #1d1d1f;
+                box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+                width: 100%;
+                position: fixed;
+                top: 0;
                 z-index: 1000;
             }
 
-            .nav.show {
+            .logo {
                 display: flex;
+                align-items: center;
+                gap: 5px;
             }
 
-            .menu-icon {
+            .logo img {
+                width: 50px; 
+                height: auto; 
+                display: block; 
+            }
+
+            .logo h4 {
+                font-size: 1.5rem;
+                margin: 0;
+                color: #1d1d1f;
+            }
+
+            .nav {
                 display: flex;
+                gap: 20px;
             }
-        }
 
-        .container {
-            text-align: center;
-            max-width: 500px;
-            margin-top: 100px;
-            animation: fadeIn 1s ease-in-out;
-        }
-
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        h1 {
-            font-size: 2.5rem;
-            font-weight: 600;
-            margin-bottom: 20px;
-            color: #1d1d1f;
-        }
-
-        p {
-            font-size: 1.2rem;
-            margin-bottom: 40px;
-            color: #6e6e73;
-            line-height: 1.6;
-        }
-
-        .btn-container {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-        }
-
-        a {
+            .nav a {
             text-decoration: none;
+            color: #1d1d1f;
+            font-size: 1.5rem;
+            padding: 8px 8px;
+            padding-right: 10px;
+            position: relative; /* Necessary for pseudo-element positioning */
+            display: inline-block;
+            overflow: hidden; /* Ensures the underline animation stays within bounds */
+            padding-right: 40px;
         }
 
-        button {
-            padding: 14px 30px;
-            border: none;
-            border-radius: 0px;
-            font-size: 1rem;
-            font-weight: 500;
-            color: #fff;
-            background: linear-gradient(90deg, #000000, #000000);
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-            cursor: pointer;
-            transition: all 0.3s ease;
-        }
-
-        button:hover {
-            background: linear-gradient(90deg, #b0b0b0, #b0b0b0);
-            transform: translateY(-3px);
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
-            color:#121F32
-        }
-
-        footer {
+        .nav a::after {
+            content: "";
             position: absolute;
-            bottom: 20px;
+            bottom: 0;
+            left: 0;
             width: 100%;
-            text-align: center;
-            font-size: 0.9rem;
-            color: #6e6e73;
+            height: 2px;
+            background-color: #1d1d1f; /* Color of the underline */
+            transform: scaleX(0);
+            transform-origin: bottom right;
+            transition: transform 0.3s ease-out;
         }
-    </style>
+
+        .nav a:hover::after {
+            transform: scaleX(.8);
+            transform-origin: bottom left;
+        }
+
+            .dropdown-container {
+                position: relative;
+            }
+
+            .dropdown-container:hover .dropdown-menu {
+                display: block;
+            }
+
+            .dropdown-menu {
+        display: none;
+        position: absolute;
+        top: 100%; /* Directly below the "Reports & Insights" button */
+        background-color: #fff;
+        border: 1px solid #ddd;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        z-index: 1000;
+        min-width: 270px; /* Adjust width to fit content */
+        padding: 30px; /* Padding inside the dropdown */
+        right: 10px;
+        box-sizing: border-box;
+    
+    }
+    .dropdown-menu a {
+        display: block;
+        padding: 10px 15px; 
+        margin: 0; 
+        text-align: left; /* Align text to the left */
+        color: #333; /* Standard text color */
+        text-decoration: none; /* Remove underline by default */
+        background-color: transparent; /* Ensure no extra background color */
+        white-space: nowrap; /* Prevent text wrapping */
+        border-bottom: 1px solid #ddd; /* Add a border between items */
+    }
+
+
+    .dropdown-menu a:hover {
+        background-color: #f0f0f0;
+        color: #121F32;
+    }
+            /* Hamburger Menu Styles */
+            .menu-icon {
+                display: none;
+                flex-direction: column;
+                justify-content: space-between;
+                width: 25px;
+                height: 18px;
+                cursor: pointer;
+            }
+
+            .menu-icon div {
+                height: 3px;
+                background-color: #1d1d1f;
+                border-radius: 2px;
+            }
+
+            @media screen and (max-width: 768px) {
+                .nav {
+                    display: none;
+                    flex-direction: column;
+                    position: absolute;
+                    top: 60px;
+                    right: 20px;
+                    background-color: #ffffff;
+                    padding: 10px;
+                    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+                    border-radius: 8px;
+                    z-index: 1000;
+                }
+
+                .nav.show {
+                    display: flex;
+                }
+
+                .menu-icon {
+                    display: flex;
+                }
+            }
+
+            .container {
+                text-align: center;
+                max-width: 500px;
+                margin-top: 100px;
+                animation: fadeIn 1s ease-in-out;
+            }
+
+            @keyframes fadeIn {
+                from {
+                    opacity: 0;
+                    transform: translateY(20px);
+                }
+                to {
+                    opacity: 1;
+                    transform: translateY(0);
+                }
+            }
+
+            h1 {
+                font-size: 2.5rem;
+                font-weight: 600;
+                margin-bottom: 20px;
+                color: #1d1d1f;
+            }
+
+            p {
+                font-size: 1.2rem;
+                margin-bottom: 40px;
+                color: #6e6e73;
+                line-height: 1.6;
+            }
+
+            .btn-container {
+                display: flex;
+                justify-content: center;
+                gap: 20px;
+            }
+
+            a {
+                text-decoration: none;
+            }
+
+            button {
+                padding: 14px 30px;
+                border: none;
+                border-radius: 0px;
+                font-size: 1rem;
+                font-weight: 500;
+                color: #fff;
+                background: linear-gradient(90deg, #000000, #000000);
+                box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+                cursor: pointer;
+                transition: all 0.3s ease;
+            }
+
+            button:hover {
+                background: linear-gradient(90deg, #b0b0b0, #b0b0b0);
+                transform: translateY(-3px);
+                box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
+                color:#121F32
+            }
+
+            footer {
+                position: absolute;
+                bottom: 20px;
+                width: 100%;
+                text-align: center;
+                font-size: 0.9rem;
+                color: #6e6e73;
+            }
+        </style>
 </head>
 <body>
     <header class="header">
-        <div class="logo">
-            <img src="../images/dclogo.png" alt="Disruptive Capital Logo">
-            <h4>Disruptive Capital</h4>
-        </div>
+        <nav class="logo">
+            <a href="../index.html"><img src="../images/dclogo.png" alt="Disruptive Capital Logo"></a>
+            <a href="../index.html"><h4>Disruptive Capital</h4></a>
+        </nav>
+
         <div class="menu-icon" id="menu-icon">
             <div></div>
             <div></div>
@@ -261,7 +262,7 @@
             <a href="../index.html">Home</a>
             <a href="../about/index.html">About Us</a>
             <a href="../contact/index.html">Contact</a>
-            <a href="../index.html">Subscribe</a>
+            <a href="index.html">Subscribe</a>
         </nav>
     </header>
 
