--- a/risingstars.html
+++ b/risingstars.html
@@ -6,7 +6,7 @@
     <title>Global VC Landscape</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-   
+    <script src="scripts.js"></script>
     <title>Disruptive Capital</title>
     <link rel="stylesheet" href="styles.css">
    
@@ -145,16 +145,16 @@
    
 
     <header class="header">
-        <div class="logo">
-            <img src="./images/dclogo.png" alt="Disruptive Capital Logo">
-            <h4>Disruptive Capital</h4>
-        </div>
+        <nav class="logo">
+            <a href="../index.html"><img src="../images/dclogo.png" alt="Disruptive Capital Logo"></a>
+            <a href="../index.html"><h4>Disruptive Capital</h4></a>
+    </nav>
         
         <!-- Hamburger Menu Icon (Visible on Mobile Only) -->
-        <div class="container menu-icon" id="menu-icon" onclick="toggleMenu(this)">
-            <div class="bar1"></div>
-            <div class="bar2"></div>
-            <div class="bar3"></div>
+        <div class="menu-icon" id="menu-icon" onclick="toggleMenu(this)">
+            <div></div>
+            <div></div>
+            <div></div>
         </div>
         
         <!-- Navigation Menu -->
