fixed the about menu on mobile

--- a/about/index.html
+++ b/about/index.html
@@ -141,14 +141,14 @@
             <a href="../index.html"><h4>Disruptive Capital</h4></a>
         </nav>
 
-        <div class="hamburger" id="hamburger">
+        <div class="menu-icon" id="menu-icon" onclick="toggleMenu(this)">
             <div></div>
             <div></div>
             <div></div>
         </div>
 
         
-        <nav class="nav">
+        <nav class="nav" id="nav-menu">
             <div class="dropdown-container">
                 <a href="../reports/index.html" class="dropdown">Reports & Insights</a>
                 <div class="dropdown-menu">
