fixed the graphs in the articles and changed the titles in the articles

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <p>November 2024 |
               Disruptive Capital Insight Report
               </p>
-            <a href="./AIInfrastructure.html" class="report-button">Read Report</a>
+            <a href="./articles/AIInfrastructure.html" class="report-button">Read Report</a>
         </div>
 
         <div class="report-card">
@@ -169,7 +169,7 @@
           <p>November 2024 |
             Disruptive Capital Insight Report
             </p>
-          <a href="spaceInd.html" class="report-button">Read Report</a>
+          <a href="./articles/spaceInd.html" class="report-button">Read Report</a>
       </div>
 
         <div class="report-card">
@@ -179,7 +179,7 @@
             <p>November 2024 |
               Disruptive Capital Insight Report
               </p>
-            <a href="GreenHydrogen.html" class="report-button">Read Report</a>
+            <a href="./articles/GreenHydrogen.html" class="report-button">Read Report</a>
         </div>
 
 
@@ -191,7 +191,7 @@
             <p>November 2024 |
               Disruptive Capital Insight Report
               </p>
-            <a href="quantumrep.html" class="report-button">Read Report</a>
+            <a href="./articles/quantumrep.html" class="report-button">Read Report</a>
         </div>
 
 
@@ -202,7 +202,7 @@
             <p>November 2024 |
               Disruptive Capital Insight Report
               </p>
-            <a href="semiconductorrep.html" class="report-button">Read Report</a>
+            <a href="./articles/semiconductorrep.html" class="report-button">Read Report</a>
         </div>
         
         <div class="report-card">
@@ -211,7 +211,7 @@
             <p>November 2024 |
               Disruptive Capital Insight Report
               </p>
-            <a href="advmaterialrep.html" class="report-button">Read Report</a>
+            <a href="./articles/advmaterialrep.html" class="report-button">Read Report</a>
         </div>
     </div>
 
