--- a/reports/index.html
+++ b/reports/index.html
@@ -68,7 +68,7 @@
             <p>November 2024 |
               Disruptive Capital Insight Report
               </p>
-            <a href="../AIInfrastructure.html" class="report-button">Read Report</a>
+            <a href="../articles/AIInfrastructure.html" class="report-button">Read Report</a>
         </div>
 
         <div class="report-card">
@@ -77,7 +77,7 @@
           <p>November 2024 |
             Disruptive Capital Insight Report
             </p>
-          <a href="../spaceInd.html" class="report-button">Read Report</a>
+          <a href="../articles/spaceInd.html" class="report-button">Read Report</a>
       </div>
 
 
@@ -88,7 +88,7 @@
                 <p>November 2024 |
                   Disruptive Capital Insight Report
                   </p>
-                <a href="../quantumrep.html" class="report-button">Read Report</a>
+                <a href="../articles/quantumrep.html" class="report-button">Read Report</a>
             </div>
             
 
@@ -101,7 +101,7 @@
                 <p>November 2024 |
                   Disruptive Capital Insight Report
                   </p>
-                <a href="../GreenHydrogen.html" class="report-button">Read Report</a>
+                <a href="../articles/GreenHydrogen.html" class="report-button">Read Report</a>
             </div>
 
 
@@ -111,7 +111,7 @@
               <p>November 2024 |
                 Disruptive Capital Insight Report
                 </p>
-              <a href="../semiconductorrep.html" class="report-button">Read Report</a>
+              <a href="../articles/semiconductorrep.html" class="report-button">Read Report</a>
           </div>
 
         <div class="report-card" data-category="urban">
@@ -121,7 +121,7 @@
           <p>November 2024 |
             Disruptive Capital Insight Report
             </p>
-          <a href="../advmaterialrep.html" class="report-button">Read Report</a>
+          <a href="../articles/advmaterialrep.html" class="report-button">Read Report</a>
       </div>
       <div class="report-card" data-category="urban">
         <img src="../images/vertfarm.png" alt="Report 3">
@@ -130,7 +130,7 @@
         <p>November 2024 |
           Disruptive Capital Insight Report
           </p>
-        <a href="../verticalfarm.html" class="report-button">Read Report</a>
+        <a href="../articles/verticalfarm.html" class="report-button">Read Report</a>
     </div>
 
 
@@ -141,7 +141,7 @@
         <p>November 2024 |
           Disruptive Capital Insight Report
           </p>
-        <a href="../synthbiorep.html" class="report-button">Read Report</a>
+        <a href="../articles/synthbiorep.html" class="report-button">Read Report</a>
     </div>
 
 
@@ -151,7 +151,7 @@
       <p>November 2024 |
         Disruptive Capital Insight Report
         </p>
-      <a href="../fitness.html" class="report-button">Read Report</a>
+      <a href="../articles/fitness.html" class="report-button">Read Report</a>
   </div>
   
 
