--- a/contact/index.html
+++ b/contact/index.html
@@ -41,21 +41,14 @@
         </nav>
     </header>
 
-    <!-- Hero Section -->
-    <section class="contact-hero">
-        <h1 class="headline">Get in Touch</h1>
-        <p class="subheadline">We’re here to help you unlock billion-dollar opportunities.</p>
-        <a href="#contact-form" class="cta-button talk-to-us">Talk to Us</a>
-    </section>
-
     <!-- Contact Form Section -->
     <section id="contact-form" class="contact-form-section">
         <h2>Let’s Connect</h2>
         <p class="section-description">Fill out the form below, and we’ll get back to you as soon as possible.</p>
         
-        <form action="https://formsubmit.co/meelajch@gmail.com" method="POST" enctype="text/plain" class="contact-form">
+        <form action="/sendEmail" method="POST" class="contact-form">
             <label for="name">Full Name</label>
-            <input type="text" id="name" name="name" placeholder="Enter your full name" required>
+            <input type="text" id="fullName" name="fullName" placeholder="Enter your full name" required>
 
             <label for="email">Email Address</label>
             <input type="email" id="email" name="email" placeholder="Enter your email" required>
