Who we are has been changed

--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
     </section>
 
     <div class="animated-list-container">
-      <h2 class="animated-list-title">Who We Are</h2>
+      <div class="list-item" data-criteria="Sectoral Growth">
+        <h3><i>Who We Are</i></h3>
+        <p>
       <div class="animated-list">
         <div class="list-item" data-criteria="Investment Levels">
           <p>
@@ -132,13 +134,11 @@
         <div class="list-item" data-criteria="Sectoral Growth">
           <h3><i>What We Offer</i></h3>
           <p>
-            <p>Disruptive Capital offers a comprehensive approach to creating impact. Our premium research reports provide unparalleled depth, 
-              actionable insights, and strategic foresight, helping clients uncover opportunities in high-growth sectors.</p>
+            <p>Disruptive Capital offers a comprehensive approach to creating impact. Our premium research reports provide unparalleled depth, actionable insights, and strategic foresight, helping clients uncover opportunities in high-growth sectors.</p>
               
   <br>
   
-  <p>But we don’t stop at insights—we help bring projects to life. From large-scale infrastructure initiatives to groundbreaking technological 
-    advancements and resource development, we partner with clients to turn strategy into execution, delivering results that transform ideas into lasting success.</p>
+  <p>But we don’t stop at insights—we help bring projects to life. From large-scale infrastructure initiatives to groundbreaking technological advancements and resource development, we partner with clients to turn strategy into execution, delivering results that transform ideas into lasting success.</p>
           </p>
         </div>
         <div class="list-item" data-criteria="Economic Potential">
@@ -150,9 +150,7 @@
               
   <br>
   
-  <p>Unlike others, we don’t stop at research—we work alongside government officials and private investors to execute impactful projects, 
-    turning bold ideas into measurable success. By focusing on untapped markets and industries shaping the global economy, we provide our 
-    clients with the strategic advantage needed to drive sustainable growth and lead in a competitive landscape.</p>
+  <p>Unlike others, we don’t stop at research—we work alongside government officials and private investors to execute impactful projects, turning bold ideas into measurable success. By focusing on untapped markets and industries shaping the global economy, we provide our clients with the strategic advantage needed to drive sustainable growth and lead in a competitive landscape.</p>
           </p>
         </div>
       </div>
