I have formatted the how we identify emerging markets to be in the center and left

--- a/index.html
+++ b/index.html
@@ -155,7 +155,6 @@
         </div>
       </div>
     </div>
-
     <section id="vc-investment">
       <iframe
         src="globalleadingind.html"
@@ -164,57 +163,46 @@
         frameborder="0"
       ></iframe>
     </section>
-
-    <div class="animated-list-container">
-      <h2 class="animated-list-title">
-        How We Identify and Evaluate Emerging Markets
-      </h2>
+    
+    <h2 class="animated-list-title" style="text-align: center; width: 100%;">
+      How We Identify and Evaluate Emerging Markets
+    </h2>
+    
+    <div class="animated-list-container" style="margin-left: 0; padding-left: 0;">
       <div class="animated-list">
         <div class="list-item" data-criteria="Investment Levels">
           <h3>Investment Levels</h3>
           <p>
-            Markets attracting substantial capital inflows, particularly
-            multi-billion-dollar investments in high-growth sectors like
-            renewable energy, advanced manufacturing, and technology.
+            Markets attracting substantial capital inflows, particularly multi-billion-dollar investments in high-growth sectors like renewable energy, advanced manufacturing, and technology.
           </p>
         </div>
         <div class="list-item" data-criteria="Sectoral Growth">
           <h3>Sectoral Growth</h3>
           <p>
-            Broad-based expansion across traditional industries (e.g.,
-            agriculture, textiles) and innovative fields like AI, fintech, and
-            green hydrogen, emphasizing adaptability and diversification.
+            Broad-based expansion across traditional industries (e.g., agriculture, textiles) and innovative fields like AI, fintech, and green hydrogen, emphasizing adaptability and diversification.
           </p>
         </div>
         <div class="list-item" data-criteria="Economic Potential">
           <h3>Economic Potential</h3>
           <p>
-            Emerging markets with favorable demographics, strategic geographic
-            locations, and strong domestic demand, driving long-term global
-            growth.
+            Emerging markets with favorable demographics, strategic geographic locations, and strong domestic demand, driving long-term global growth.
           </p>
         </div>
-        <div
-          class="list-item"
-          data-criteria="Policy and Regulatory Environment"
-        >
+        <div class="list-item" data-criteria="Policy and Regulatory Environment">
           <h3>Policy and Regulatory Environment</h3>
           <p>
-            Markets with pro-business policies, incentives for foreign direct
-            investment (FDI), and government-backed initiatives supporting
-            innovation and infrastructure development.
+            Markets with pro-business policies, incentives for foreign direct investment (FDI), and government-backed initiatives supporting innovation and infrastructure development.
           </p>
         </div>
         <div class="list-item" data-criteria="Infrastructure Development">
           <h3>Infrastructure Development</h3>
           <p>
-            Strong commitments to digital connectivity, transportation, and
-            energy systems, creating a foundation for scalable and sustainable
-            growth.
+            Strong commitments to digital connectivity, transportation, and energy systems, creating a foundation for scalable and sustainable growth.
           </p>
         </div>
       </div>
     </div>
+
 
     <!-- Featured Reports -->
     <!-- Reports Section -->
