--- a/index.html
+++ b/index.html
@@ -164,42 +164,62 @@
       ></iframe>
     </section>
     
-    <h2 class="animated-list-title" style="text-align: center; width: 100%;">
+    <h2 class="animated-list-title" style="text-align: center; width: 100%; margin-top: 80px;">
       How We Identify and Evaluate Emerging Markets
-    </h2>
-    
-    <div class="animated-list-container" style="margin-left: 0; padding-left: 0;">
-      <div class="animated-list">
-        <div class="list-item" data-criteria="Investment Levels">
-          <h3>Investment Levels</h3>
+</h2>
+<div class="animated-list-container" style="margin-left: 0; padding-left: 0; margin-top: -30px;">
+  <div class="animated-list">
+    <div class="list-item" data-criteria="Macro-Economic Analysis">
+      <h3>Macro-Economic Analysis</h3>
           <p>
-            Markets attracting substantial capital inflows, particularly multi-billion-dollar investments in high-growth sectors like renewable energy, advanced manufacturing, and technology.
+            We begin by assessing the macroeconomic landscape, focusing on key indicators such as GDP growth, inflation rates, foreign direct investment (FDI) flows, and demographic trends. By analyzing these factors, we identify markets with high growth potential and long-term stability. Our proprietary algorithms process vast datasets to pinpoint anomalies and trends that might otherwise go unnoticed.
           </p>
         </div>
-        <div class="list-item" data-criteria="Sectoral Growth">
-          <h3>Sectoral Growth</h3>
+        <div class="list-item" data-criteria="Political and Regulatory Landscape">
+          <h3>Political and Regulatory Landscape</h3>
           <p>
-            Broad-based expansion across traditional industries (e.g., agriculture, textiles) and innovative fields like AI, fintech, and green hydrogen, emphasizing adaptability and diversification.
+            Understanding the political and regulatory environment is crucial to evaluating the viability of investments in emerging markets. Our team conducts in-depth research on governance quality, policy frameworks, and regulatory risks, providing a nuanced perspective on how political dynamics might impact business operations and investment returns.
           </p>
         </div>
-        <div class="list-item" data-criteria="Economic Potential">
-          <h3>Economic Potential</h3>
+        <div class="list-item" data-criteria="Sector-Specific Insights">
+          <h3>Sector-Specific Insights</h3>
           <p>
-            Emerging markets with favorable demographics, strategic geographic locations, and strong domestic demand, driving long-term global growth.
+            We delve into sector-level analysis to identify industries poised for growth within each market. By leveraging advanced analytics and on-the-ground intelligence, we map out competitive landscapes, supply chain efficiencies, and innovation trajectories, ensuring that we focus on sectors with the highest potential for disruption and profitability.
           </p>
         </div>
-        <div class="list-item" data-criteria="Policy and Regulatory Environment">
-          <h3>Policy and Regulatory Environment</h3>
+        <div class="list-item" data-criteria="Sustainability and SDG Considerations">
+          <h3>Sustainability and SDG Considerations</h3>
           <p>
-            Markets with pro-business policies, incentives for foreign direct investment (FDI), and government-backed initiatives supporting innovation and infrastructure development.
+            We integrate the United Nations Sustainable Development Goals (SDGs) into our evaluation process, aligning our approach with these global objectives. Our assessments focus on how markets contribute to sustainable development, emphasizing climate resilience, social equity, and responsible governance. This approach ensures that our recommendations support both economic growth and progress toward achieving the SDGs, fostering long-term viability and meaningful impact.
           </p>
         </div>
-        <div class="list-item" data-criteria="Infrastructure Development">
-          <h3>Infrastructure Development</h3>
+        <div class="list-item" data-criteria="Risk Assessment and Mitigation">
+          <h3>Risk Assessment and Mitigation</h3>
           <p>
-            Strong commitments to digital connectivity, transportation, and energy systems, creating a foundation for scalable and sustainable growth.
+            Emerging markets often present unique risks, including currency volatility, geopolitical tensions, and infrastructure gaps. Our comprehensive risk assessment framework identifies these challenges and develops mitigation strategies. We stress-test scenarios and create contingency plans to safeguard investments.
           </p>
         </div>
+        <div class="list-item" data-criteria="Local Partnerships and On-the-Ground Expertise">
+          <h3>Local Partnerships and On-the-Ground Expertise</h3>
+          <p>
+            We collaborate with local experts, institutions, and businesses to gain nuanced insights that are not accessible through conventional research methods. These partnerships enable us to validate our findings, adapt to cultural nuances, and uncover hidden opportunities.
+          </p>
+        </div>
+        <div class="list-item" data-criteria="Dynamic Monitoring and Adaptation">
+          <h3>Dynamic Monitoring and Adaptation</h3>
+          <p>
+            Markets evolve, and so do our strategies. Through dynamic monitoring and 
+            real-time data analysis, we continuously refine our evaluations. Our clients 
+            benefit from insights that remain relevant, actionable, and aligned with 
+            shifting global trends.
+          </p>
+        </div>
+      </div>
+      <div class="list-item" data-criteria="Dynamic Monitoring and Adaptation">
+        <h3>Why It Matters</h3>
+        <p>
+          Our process is more than just analysis—it is a roadmap for success in complex and volatile markets. By combining cutting-edge technology, human expertise, and a commitment to sustainability, Disruptive Capital empowers clients to make informed, confident decisions. Whether entering new markets, scaling operations, or navigating challenges, we deliver the clarity and foresight necessary for impactful results.
+        </p>
       </div>
     </div>
 
