--- a/index.html
+++ b/index.html
@@ -155,11 +155,17 @@
         </div>
       </div>
     </div>
-    <section id="vc-investment">
+    <style>
+      .adjustable-space {
+        margin-top: 40px; /* Adjust this value to increase/decrease space above */
+        margin-bottom: -50px; /* Adjust this value to increase/decrease space below */
+      }
+    </style>
+    <section id="vc-investment" class="adjustable-space">
       <iframe
         src="globalleadingind.html"
         width="100%"
-        height="600"
+        height="550"
         frameborder="0"
       ></iframe>
     </section>
