--- a/terms.html
+++ b/terms.html
@@ -123,6 +123,12 @@
             We reserve the right to suspend or terminate your access to the Website at any time without prior
             notice for violations of these Terms or any other reason.
         </p>
+    </p>
+        
+    <h3>Links</h3>
+    <p>
+        "Global Leading Industries by VC Investment, 2024" Graph source: https://dealroom.co/guides/global. 
+    </p>
     </main>
     <footer class="site-footer">
         <p>&copy; 2024 Disruptive Capital. All Rights Reserved.</p>
